Ros2_workspace/log/build_2022-05-21_22-19-59/nn_drone_final/stderr.log
  File "/home/xilinx/wrkspace/install/nn_drone_final/lib/python3.8/site-packages/nn_drone_final/SimpleArmMission.py", line 62
    if(msg.data.find("monitor") == 0 & !armed):
                                       ^
SyntaxError: invalid syntax

